# atlas-cli-wasm-plugins

./: Cargo.toml  Makefile  README.md
crates/spec/: Cargo.toml
crates/spec/src/: lib.rs  main.rs
plugins/atlas-plugin/: Cargo.toml
plugins/atlas-plugin/src/: lib.rs  plugin.rs
plugins/go-plugin/: go.mod  main.go
plugins/test-plugin/: Cargo.toml
plugins/test-plugin/src/: args.rs  lib.rs  plugin.rs
src/: main.rs
src/plugin/: adapter.rs  component.rs  manager.rs  mod.rs  plugin.rs
temp/: atlas_plugin.cplugin
wit/: plugin.wit
