[package]
name = "atlas-cli-ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["cargo", "string"] }
tokio = { version = "1.37.0", features = ["full"] }
wasmcloud-component-adapters = "0.9.0"
wasmtime = "20.0.2"
wasmtime-wasi = "20.0.2"
wit-component = "0.207.0"

[workspace]
members = ["crates/*", "plugins/*"]
exclude = ["plugins/.cargo/"]
resolver = "2"

[profile.release]
opt-level = 3
lto = true