[package]
name = "test_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ]}
wit-bindgen = "0.24.0"

[lib]
crate-type = ["cdylib"]